# GlocalText

./: .gitignore  CNAME  README.md  README_zh-Hant.md  anthropic.md  config.yaml.example  docs.html  genai.md  glocaltext_config.example.yaml  index.html  main.yaml  pyproject.toml
.github/: release.toml
.github/release.d/: build-python.sh  validate-python.sh
.github/workflows/: build-assets.yml  create-release.yml  python-package.yml
.ogos/glocaltext/configs/: main.yaml
assets/: script.js  styles.css
docs/: anthropic.md  genai.md  openai.md
src/GlocalText.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/glocaltext/: __init__.py  __main__.py  config.py  logging_utils.py  match_state.py  models.py  paths.py  reporting.py  templates.py  text_coverage.py  translate.py  types.py  workflow.py
src/glocaltext/cli/: main.py
src/glocaltext/core/: cache.py  compiler.py  config.py  i18n.py  l10n.py  postprocessor.py  sync.py
src/glocaltext/core/translators/: deep_translator.py  gemini.py  ollama.py  openai.py
src/glocaltext/processing/: __init__.py  base.py  cache_policies.py  cache_processors.py  cache_utils.py  capture_processor.py  processors.py  termination_processor.py  translation_processor.py  writeback_processor.py
src/glocaltext/reporters/: __init__.py  dry_run_reporter.py  summary_reporter.py
src/glocaltext/translators/: __init__.py  base.py  base_genai.py  gemini_translator.py  gemma_translator.py  google_translator.py  mock_translator.py
src/glocaltext/utils/: debug_logger.py  hashing.py  logger.py
tests/: __init__.py  test_cache_protection.py  test_config.py  test_config_regex_validation.py  test_coverage.py  test_gemini_translator.py  test_gemma_translator.py  test_google_translator.py  test_i18n.py  test_logging_utils.py  test_main.py  test_match_state.py  test_mock_translator.py  test_new_features_config.yaml  test_orchestrator.py  test_paths.py  test_postprocessor.py  test_processing.py  test_replace_rules_translation_input.py  test_reporters.py  test_translate.py  test_translators.py  test_workflow.py
tests/integration_tests/: README.md  __init__.py  conftest.py  test_gemini_translator.py  test_gemma_translator.py  test_google_translator.py  test_mock_translator.py
tests/performance/: README.md  __init__.py  benchmark_coverage.py  benchmark_results.md
tests/regex_tests/: README.md  __init__.py  test_basic_matching.py  test_edge_cases.py  test_flags.py  test_patterns.py  test_substitution.py  test_unicode.py
tests/rules/: README.md  __init__.py  test_cache_protection.py  test_coverage.py  test_replace_rules.py  test_same_language_cache.py  test_unified_architecture_e2e.py
tests/temp_cache/: .glocaltext_cache.json
