[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GlocalText"
version = "3.3.1"
authors = [{ name = "OG-Open-Source" }]
description = "A config-driven script to batch translate files using various providers."
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "deep-translator",
  "google-genai",
  "PyYAML",
  "regex",
  "pydantic",
  "tenacity~=8.2.3",
]

[project.scripts]
glocaltext = "glocaltext.__main__:main"

[project.urls]
"Homepage" = "https://github.com/OG-Open-Source/GlocalText"
"Repository" = "https://github.com/OG-Open-Source/GlocalText"

[tool.setuptools.packages.find]
# This tells setuptools that the packages are under the 'src' directory
where = ["src"]

[tool.mypy]
exclude = ["build/"]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
