[tool.poetry]
name = "GlocalText"
version = "4.0.0b3"
description = "A config-driven script to batch translate files using various providers."
authors = ["OG-Open-Source"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
homepage = "https://github.com/OG-Open-Source/GlocalText"
repository = "https://github.com/OG-Open-Source/GlocalText"

[tool.poetry.dependencies]
python = "^3.10"
deep-translator = "^1.11.4"
google-genai = "^1.46.0"
ruamel-yaml = "^0.18.0"
regex = "^2025.10.23"
pydantic = "^2.12.3"
tenacity = "^9.1.2"

[tool.poetry.scripts]
glocaltext = "glocaltext.__main__:main"

[tool.mypy]
exclude = ["build/"]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "PLR2004", "PT011"]
"src/glocaltext/coverage.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
